handle scrollbar in multi-level menu when there is a lot of content, add style overlay for scrollbar, fix page title and update favicon, fix waring tippy

--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,6 +10,9 @@
 .menu-popper {
     padding-bottom: 8px;
 }
+.menu-body {
+    overflow-y: auto;
+}
 
 // Menu items
 .menu-item {
@@ -31,6 +34,7 @@
 
 .header {
     position: relative;
+    flex-shrink: 0;
     height: 50px;
     margin: -8px;
 }
